--- a/angular.json
+++ b/angular.json
@@ -29,6 +29,7 @@
             ],
             "styles": [
               "node_modules/bootstrap/scss/bootstrap.scss",
+              "src/assets/global.scss",
               "src/styles.scss"
             ],
             "scripts": []
